[gd_scene load_steps=7 format=3 uid="uid://bstbx8p6c2u25"]

[ext_resource type="Texture2D" uid="uid://bmalybikwu6en" path="res://Resources/Sprites/UI_TravelBook_FrameSelect01b.png" id="1_5ds12"]
[ext_resource type="Script" uid="uid://8xxpj1irn71b" path="res://Scripts/quest_label.gd" id="2_1lrto"]
[ext_resource type="Texture2D" uid="uid://cyagfudhlne1p" path="res://Resources/Sprites/UI_TravelBook_IconStar01a.png" id="3_c25xy"]
[ext_resource type="FontFile" uid="uid://b1s1rbc2pq2bd" path="res://Resources/Fonts/Berry Rotunda.ttf" id="4_2folo"]
[ext_resource type="Texture2D" uid="uid://1ani1rq2to8l" path="res://Resources/Sprites/UI_TravelBook_IconArrow01a.png" id="5_jg4aa"]
[ext_resource type="Texture2D" uid="uid://cuuaic7otunys" path="res://Resources/Sprites/UI_TravelBook_IconArrow01a-1PRESSED.png" id="6_vjw7u"]

[node name="QuestLabel" type="TextureRect"]
custom_minimum_size = Vector2(0, 100)
offset_right = 754.0
offset_bottom = 108.0
texture = ExtResource("1_5ds12")
script = ExtResource("2_1lrto")

[node name="DifRepIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 24.0
offset_right = 78.0
offset_bottom = 71.0
texture = ExtResource("3_c25xy")

[node name="QuestDescriptionLabel" type="Label" parent="."]
modulate = Color(0.357558, 0.264298, 0.169752, 1)
layout_mode = 0
offset_left = 90.0
offset_top = 15.0
offset_right = 639.0
offset_bottom = 99.0
theme_override_fonts/font = ExtResource("4_2folo")
theme_override_font_sizes/font_size = 19
text = "Orc Fortress Raid - Reward 500 Gold, 500 Rep"
vertical_alignment = 1
autowrap_mode = 2

[node name="GoButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 648.0
offset_top = 24.0
offset_right = 714.0
offset_bottom = 76.0
texture_normal = ExtResource("5_jg4aa")
texture_hover = ExtResource("6_vjw7u")
stretch_mode = 0

[connection signal="pressed" from="GoButton" to="." method="_on_go_button_pressed"]
